--- a/framework-meta/Info.plist
+++ b/framework-meta/Info.plist
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-<key>CFBundleDevelopmentRegion</key>
-<string>en</string>
-<key>CFBundleExecutable</key>
-<string>{NAME}</string>
-<key>CFBundleIdentifier</key>
-<string>com.na.{NAME}</string>
-<key>CFBundleInfoDictionaryVersion</key>
-<string>6.0</string>
-<key>CFBundleName</key>
-<string>{NAME}</string>
-<key>CFBundlePackageType</key>
-<string>FMWK</string>
-</dict>
+    <dict>
+        <key>CFBundleDevelopmentRegion</key>
+        <string>en</string>
+        <key>CFBundleExecutable</key>
+        <string>{NAME}</string>
+        <key>CFBundleIdentifier</key>
+        <string>com.na.{NAME}</string>
+        <key>CFBundleInfoDictionaryVersion</key>
+        <string>6.0</string>
+        <key>CFBundleName</key>
+        <string>{NAME}</string>
+        <key>CFBundlePackageType</key>
+        <string>FMWK</string>
+        <key>MinimumOSVersion</key>
+        <string>15.1</string>
+        <key>CFBundleShortVersionString</key>
+        <string>1.0.0</string>
+        <key>CFBundleVersion</key>
+        <string>1</string>
+    </dict>
 </plist>
